--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
     <button id="button-4" class="btn btn-danger btn-sm mb-2">Danger Small Button</button>
 
     <!-- Warning Large Full-width Button -->
-    <button id="button-5" class="btn btn-warning btn-lg w-100 mb-2">Warning Large Full-width Button</button>
+    <button id="button-5" class="btn btn-warning btn-lg vw-100 mb-2">Warning Large Full-width Button</button>
 
     <!-- Disabled Info Button -->
     <button id="button-6" class="btn btn-info disabled">Disabled Info Button</button>
